--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -8,4 +8,8 @@
   --black: #2f2f2f;
   --black-semi: #2f2f2f80;
   --error: #ef5050;
+  --border-color: rgba(47, 47, 47, 0.2);
+  --placeholder: rgba(47, 47, 47, 0.6);
+  --border-color-active: rgba(47, 47, 47, 0.4);
+  --text-span: rgba(47, 47, 47, 0.5);
 }
