--- a/src/components/WaterModal/WaterModal.module.css
+++ b/src/components/WaterModal/WaterModal.module.css
@@ -5,6 +5,7 @@
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: -0.01em;
+  margin: 0;
 }
 
 @media only screen and (min-width: 768px) {
