--- a/src/components/CalendarItem/CalendarItem.module.css
+++ b/src/components/CalendarItem/CalendarItem.module.css
@@ -35,3 +35,21 @@
 
   color: #2f2f2f99;
 }
+
+@media only screen and (min-width: 768px) {
+  .calendar_items {
+    gap: 4px;
+  }
+
+  .button_day {
+    width: 38px;
+    height: 38px;
+
+    font-size: 16px;
+  }
+
+  .proc_number {
+    height: 23px;
+    font-size: 12px;
+  }
+}
