--- a/src/components/DailyInfo/AddWaterBtnDayliInfo/AddWaterBtnDayliInfo.module.css
+++ b/src/components/DailyInfo/AddWaterBtnDayliInfo/AddWaterBtnDayliInfo.module.css
@@ -1,6 +1,5 @@
-.button {
-  display: flex;
-
+.add_button {
+  float: right;
   border: none;
   background-color: inherit;
   font-family: var(--font-family);
@@ -9,12 +8,13 @@
   line-height: 150%;
   letter-spacing: -0.01em;
   text-align: center;
-  color: var(--main);
+  color: #323f47;
+  padding-right: 20px;
 }
 
 .icon {
-  stroke: black;
   fill: #9be1a0;
+  stroke: #323f47;
   transition: 250ms;
 }
 
@@ -28,4 +28,10 @@
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+@media screen and (min-width: 703px) {
+  .add_button {
+    padding-right: 32px;
+  }
 }
