--- a/src/components/WaterModal/WaterForm/WaterForm.module.css
+++ b/src/components/WaterModal/WaterForm/WaterForm.module.css
@@ -1,3 +1,14 @@
+input:focus-visible,
+select:focus-visible {
+  outline: none;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 h2,
 p {
   margin: 0;
@@ -10,7 +21,8 @@ p {
   font-weight: 700;
   line-height: 1.25;
   letter-spacing: -0.01em;
-
+}
+.secondTitleMargin {
   margin-top: 24px;
   margin-bottom: 20px;
 }
@@ -73,4 +85,72 @@ p {
 .disabled {
   opacity: 0.5;
   pointer-events: none;
+}
+
+.wrapperSelector {
+  display: flex;
+  flex-direction: column;
+  margin: 24px 0;
+}
+.wrapperNumber {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+
+.input {
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 15px;
+  border: 1px solid rgba(47, 47, 47, 0.15);
+  padding: 14px 16px;
+
+  color: var(--black);
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.01em;
+}
+.input:focus {
+  border: 1px solid var(--dark-blue-translucent);
+}
+
+.input::-ms-expand {
+  display: none;
+}
+
+.submit {
+  color: var(--dark-blue);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.29;
+  letter-spacing: -0.01em;
+
+  padding: 14px 40px;
+  border-radius: 30px;
+  background: var(--Accent, var(--light-green));
+  border: none;
+}
+.submit:hover {
+  background: var(--light-green-hover);
+}
+
+@media only screen and (min-width: 768px) {
+  .submit {
+    font-size: 16px;
+    line-height: 1.5;
+
+    padding: 18px 50px;
+  }
+}
+
+.error {
+  border-radius: 15px;
+  border: 1px solid var(--error);
+  color: var(--error);
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
 }
