--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Poppins';
-  src: url('../fonts/Poppins-Bold.otf') format('otf');
+  src: url('../fonts/Poppins-Bold.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Poppins';
-  src: url('../fonts/Poppins-Regular.otf') format('otf');
+  src: url('../fonts/Poppins-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../fonts/Gilroy-Bold.ttf') format('ttf');
+  src: url('../fonts/Gilroy-Bold.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,8 +24,7 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../fonts/Gilroy-Regular.ttf') format('ttf');
-  font-weight: 400;
+  src: url('../fonts/Gilroy-Regular.ttf');
   font-style: normal;
   font-display: swap;
 }
