--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -1,31 +1,37 @@
 .advantagesSection {
   position: relative;
   display: flex;
-  padding: 0;
-  min-width: 370px;
+  width: 100%;
   min-height: 353px;
-  background: url(../../assets/img/woman_aqua_track/woman_aqua_track_mob_1x.webp)
-    no-repeat center/cover;
+  background-image: image-set(
+    url(../../assets/img/woman_aqua_track/woman_aqua_track_mob_1x.webp) 1x,
+    url(../../assets/img/woman_aqua_track/woman_aqua_track_mob_2x.webp) 2x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   border-radius: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .advantagesSection {
-    padding: 32px;
     min-width: 704px;
     min-height: 446px;
-    background: url(../../assets/img/woman_aqua_track/woman_aqua_track_tablet_1x.webp)
-      no-repeat center/cover;
+    background-image: image-set(
+      url(../../assets/img/woman_aqua_track/woman_aqua_track_tablet_1x.webp) 1x,
+      url(../../assets/img/woman_aqua_track/woman_aqua_track_tablet_2x.webp) 2x
+    );
   }
 }
 
 @media screen and (min-width: 1440px) {
   .advantagesSection {
-    padding: 64px 32px;
     min-width: 672px;
     min-height: 736px;
-    background: url(../../assets/img/woman_aqua_track/woman_aqua_track_desktop_1x.webp)
-      no-repeat center/cover;
+    background-image: image-set(
+      url(../../assets/img/woman_aqua_track/woman_aqua_track_desktop_1x.webp) 1x,
+      url(../../assets/img/woman_aqua_track/woman_aqua_track_desktop_2x.webp) 2x
+    );
   }
 }
 
@@ -35,9 +41,8 @@
   bottom: 32px;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   gap: 4px;
-  justify-content: space-between;
-  align-items: center;
   max-width: 168px;
 }
 
@@ -49,11 +54,13 @@
     gap: 10px;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .advantages {
     bottom: 64px;
   }
 }
+
 .habitDrive,
 .viewStatistic,
 .personalSetting {
@@ -61,12 +68,14 @@
   font-family: 'Poppins', sans-serif;
   font-size: 8px;
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1;
+  letter-spacing: -0.01em;
   text-align: center;
   border-radius: 30px;
   border: none;
   cursor: default;
 }
+
 @media screen and (min-width: 768px) {
   .habitDrive,
   .viewStatistic,
@@ -80,15 +89,10 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  width: 81px;
   color: var(--white);
   background: var(--dark-blue);
 }
-@media screen and (min-width: 768px) {
-  .habitDrive {
-    width: 111px;
-  }
-}
+
 .circle {
   width: 8px;
   height: 8px;
@@ -97,24 +101,13 @@
 }
 
 .viewStatistic {
-  width: 83px;
   color: var(--dark-blue);
   background: var(--light-green);
 }
-@media screen and (min-width: 768px) {
-  .viewStatistic {
-    width: 121px;
-  }
-}
+
 .personalSetting {
-  width: 108px;
   color: var(--dark-blue);
   background: var(--white);
-}
-@media screen and (min-width: 768px) {
-  .personalSetting {
-    width: 158px;
-  }
 }
 
 .customersButton {
@@ -130,7 +123,7 @@
 
 @media screen and (min-width: 768px) {
   .customersButton {
-    left: 16px;
+    left: 32px;
     padding: 10px 20px;
     width: 237px;
     height: 67px;
@@ -139,26 +132,25 @@
 
 @media screen and (min-width: 1440px) {
   .customersButton {
-    left: 32px;
     bottom: 132px;
   }
 }
 
 .customerText {
   color: var(--dark-blue);
-  margin-top: 0;
   width: 66px;
   font-family: 'Poppins', sans-serif;
   font-size: 12px;
+  font-style: normal;
   font-weight: 700;
-  line-height: 1.2em;
+  line-height: 1.17;
 }
 
 @media screen and (min-width: 768px) {
   .customerText {
     font-size: 15px;
     width: 90px;
-    line-height: 1.4em;
+    line-height: 1.49;
   }
 }
 
@@ -172,49 +164,77 @@
   align-items: center;
   margin-right: 10px;
 }
+
 .customerContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .icon1 {
-  background: url(../../assets/img/customers/customer_1_mob_1x.webp) no-repeat
-    center/cover;
+  background-image: image-set(
+    url(../../assets/img/customers/customer_1_mob_1x.webp) 1x,
+    url(../../assets/img/customers/customer_1_mob_2x.webp) 2x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   left: 14px;
   z-index: 3;
 }
+
 @media screen and (min-width: 768px) {
   .icon1 {
-    background: url(../../assets/img/customers/customer_1_tab_desk_1x.webp)
-      no-repeat center/cover;
+    background-image: image-set(
+      url(../../assets/img/customers/customer_1_tab_desk_1x.webp) 1x,
+      url(../../assets/img/customers/customer_1_tab_desk_2x.webp) 2x
+    );
     left: 20px;
   }
 }
 
 .icon2 {
-  background: url(../../assets/img/customers/customer_2_mob_1x.webp) no-repeat
-    center/cover;
+  background-image: image-set(
+    url(../../assets/img/customers/customer_2_mob_1x.webp) 1x,
+    url(../../assets/img/customers/customer_2_mob_2x.webp) 2x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   left: 32px;
   z-index: 2;
 }
+
 @media screen and (min-width: 768px) {
   .icon2 {
-    background: url(../../assets/img/customers/customer_2_tab_desk_1x.webp)
-      no-repeat center/cover;
+    background-image: image-set(
+      url(../../assets/img/customers/customer_2_tab_desk_1x.webp) 1x,
+      url(../../assets/img/customers/customer_2_tab_desk_2x.webp) 2x
+    );
     left: 48px;
   }
 }
 
 .icon3 {
-  background: url(../../assets/img/customers/customer_3_mob_1x.webp) no-repeat
-    center/cover;
+  background-image: image-set(
+    url(../../assets/img/customers/customer_3_mob_1x.webp) 1x,
+    url(../../assets/img/customers/customer_3_mob_2x.webp) 2x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   left: 49px;
   z-index: 1;
 }
+
 @media screen and (min-width: 768px) {
   .icon3 {
     background: url(../../assets/img/customers/customer_3_tab_desk_1x.webp)
       no-repeat center/cover;
+    background-image: image-set(
+      url(../../assets/img/customers/customer_3_tab_desk_1x.webp) 1x,
+      url(../../assets/img/customers/customer_3_tab_desk_2x.webp) 2x
+    );
     left: 76px;
   }
 }
@@ -229,6 +249,7 @@
   border-radius: 50%;
   transform: translateY(-50%);
 }
+
 @media screen and (min-width: 768px) {
   .icon1,
   .icon2,
