--- a/src/components/WelcomeSection/WelcomeSection.module.css
+++ b/src/components/WelcomeSection/WelcomeSection.module.css
@@ -1,111 +1,119 @@
 .welcomeSection {
   padding: 24px 16px;
-  min-width: 370px;
   min-height: 411px;
   background: var(--light-gray);
   border-radius: 30px;
 }
+
 @media screen and (min-width: 768px) {
   .welcomeSection {
     padding: 32px;
-
-    min-width: 704px;
     min-height: 498px;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .welcomeSection {
-    min-width: 672px;
     min-height: 736px;
   }
 }
 
-h1 {
-  display: flex;
-  flex-direction: column;
-  margin-top: 0;
-  margin-bottom: 32px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 38px;
-  font-weight: 700;
-  line-height: 1em;
-  text-align: left;
-
-  color: #323f47;
-}
-@media screen and (min-width: 768px) {
-  h1 {
-    font-size: 64px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  h1 {
-    font-size: 80px;
-  }
-}
-
 .welcomeContainer {
-  margin-left: 0;
+  margin-top: 74px;
 }
+
 @media screen and (min-width: 768px) {
   .welcomeContainer {
+    margin-top: 50px;
     margin-left: 32px;
   }
 }
 
-p {
-  margin-top: 74px;
-  margin-bottom: 16px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.3em;
-  text-align: left;
-}
-@media screen and (min-width: 768px) {
-  p {
-    margin-top: 50px;
-    font-size: 16px;
-    line-height: 1.5em;
-  }
-}
 @media screen and (min-width: 1440px) {
-  p {
+  .welcomeContainer {
     margin-top: 132px;
   }
 }
 
-.links {
+.welcomeTopText {
+  color: var(--black);
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: 0.06em;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .welcomeTopText {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+.welcomeTitle {
+  color: var(--dark-blue);
+  font-family: 'Poppins', sans-serif;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: -0.01em;
+  align-self: stretch;
+  margin-bottom: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .welcomeTitle {
+    font-size: 64px;
+    line-height: 1.09;
+    width: 547px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .welcomeTitle {
+    font-size: 80px;
+    line-height: 0.95;
+    letter-spacing: -0.01em;
+  }
+}
+
+.welcomeLinks {
   display: flex;
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
-  .links {
+  .welcomeLinks {
     gap: 16px;
   }
 }
 .linkSignUp {
-  padding: 14px 19px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.3em;
   color: var(--dark-blue);
   text-align: center;
-  text-decoration: none;
-  background: var(--light-green);
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+  letter-spacing: -0.01;
   border-radius: 30px;
+  background-color: var(--light-green);
+  padding: 14px 19px;
 }
+
 .linkSignIn {
-  padding: 13px 20px;
   color: var(--dark-blue);
+  text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
+  font-style: normal;
   font-weight: 700;
-  text-align: center;
-  text-decoration: none;
+  line-height: 1.3;
+  letter-spacing: -0.01em;
   border-radius: 30px;
   border: 1px solid var(--dark-blue);
+  padding: 14px 28px;
 }
 
 @media screen and (min-width: 768px) {
@@ -114,5 +122,6 @@ p {
     min-width: 135px;
     padding: 18px 40px;
     font-size: 16px;
+    line-height: 1.5;
   }
 }
