--- a/src/components/UserSettingsForm/UserSettingsForm.module.css
+++ b/src/components/UserSettingsForm/UserSettingsForm.module.css
@@ -162,6 +162,7 @@
   line-height: 1.2;
   letter-spacing: -0.14px;
   margin-bottom: 0;
+  margin-top: 10px;
 }
 .subtitle {
   font-family: 'Poppins', sans-serif;
@@ -219,7 +220,7 @@
   font-style: normal;
   line-height: 1.2;
   letter-spacing: -0.14px;
-  margin-bottom: 24px;
+  margin-bottom: 24px !important;
 }
 
 .mark {
@@ -249,7 +250,7 @@
   color: var(--light-green);
   font-weight: 700;
   margin: 0;
-  margin-bottom: 14px;
+  margin-bottom: 14px !important;
 }
 .wrapperWaterAmount {
   display: flex;
@@ -368,7 +369,6 @@
   }
   .wrapperWaterAmount {
     flex-direction: row;
-    margin-bottom: 14px;
     margin-top: 24px;
   }
   .accent {
