Configure component hierarchy
Configured the hierarchy of project components.

Co-Authored-By: Eugene <150532404+AgentGarrus@users.noreply.github.com>
Co-Authored-By: ArturVayutskiy <150190335+ArturVayutskiy@users.noreply.github.com>
Co-Authored-By: Kateryna-O <149898297+Kateryna-O@users.noreply.github.com>
Co-Authored-By: NataliiaSwan <148957684+NataliiaSwan@users.noreply.github.com>
Co-Authored-By: Nelli Diachkina <nelli.diachkina@gmail.com>
Co-Authored-By: OksanaHalenko <150601280+OksanaHalenko@users.noreply.github.com>
Co-Authored-By: Oleksandr Humeniuk <149683417+Tokyo772@users.noreply.github.com>
Co-Authored-By: Tretiak-Anna <151523272+Tretiak-Anna@users.noreply.github.com>
Co-Authored-By: YeVlad <150618209+YeVlad@users.noreply.github.com>
Co-Authored-By: Alexandr Nesterenko <73670421+a-nester@users.noreply.github.com>
Co-Authored-By: Volodymyr BERESNIEV <105537147+bvv023@users.noreply.github.com>

--- a/src/components/AddWaterBtn/AddWaterBtn.module.css
+++ b/src/components/AddWaterBtn/AddWaterBtn.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   padding: 14px 20px;
   border-radius: 30px;
   max-height: 46px;
@@ -98,4 +98,101 @@
     max-width: 178px;
     margin: auto;
   }
+} */
+
+.primaryButton {
+  display: flex;
+  padding: 14px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 30px;
+  background: var(--dark-blue);
+  min-width: 140px;
+  height: 46px;
+}
+
+.primaryButtonIcon {
+  display: block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  stroke: var(--white);
+  transition: transform var(--Animation_cubic);
+}
+
+.primaryButton:focus .primaryButtonIcon,
+.primaryButton:hover .primaryButtonIcon {
+  transform: rotate(180deg);
+}
+
+.primaryButtonText {
+  color: var(--white);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+  letter-spacing: -0.01em;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 32px;
+  right: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .absolute {
+    bottom: 64px;
+    right: 32px;
+  }
+  .primaryButton {
+    padding: 18px 30px;
+    min-width: 178px;
+  }
+  .primaryButtonIcon {
+    width: 24px;
+    height: 24px;
+  }
+  .primaryButtonText {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+.secondaryButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: transparent;
+  min-width: 124px;
+}
+
+.secondaryButtonIcon {
+  width: 30px;
+  height: 30px;
+  background-color: var(--light-green);
+  stroke: var(--dark-blue);
+  border-radius: 50%;
+  padding: 6px;
+  transition: transform var(--Animation_cubic);
+}
+
+.secondaryButton:focus .secondaryButtonIcon,
+.secondaryButton:hover .secondaryButtonIcon {
+  transform: rotate(180deg);
+}
+
+.secondaryButtonText {
+  color: var(--dark-blue);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
 }
