--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -9,7 +9,8 @@
   --black-semi: #2f2f2f80;
   --error: #ef5050;
   --border-color: rgba(47, 47, 47, 0.2);
-  --placeholder: rgba(47, 47, 47, 0.6);
+  --border-shadow: rgba(0, 0, 0, 0.1);
   --border-color-active: rgba(47, 47, 47, 0.4);
+  --placeholder: rgba(47, 47, 47, 0.6);
   --text-span: rgba(47, 47, 47, 0.5);
 }
