--- a/src/components/WaterList/WaterList.module.css
+++ b/src/components/WaterList/WaterList.module.css
@@ -39,7 +39,8 @@
 }
 
 .no_water_text {
-  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (min-width: 343px) {
