--- a/src/components/UserBarPopover/UserBarPopover.module.css
+++ b/src/components/UserBarPopover/UserBarPopover.module.css
@@ -4,7 +4,7 @@
   border-radius: 15px;
   padding: 14px;
   width: 157px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px var(--border-shadow);
   z-index: 1000;
 }
 
@@ -25,20 +25,20 @@
 }
 
 .logoutIcon {
-  fill: rgba(50, 63, 71, 0.4);
-  stroke: rgba(50, 63, 71, 0.4);
+  fill: var(--dark-blue-translucent);
+  stroke: var(--dark-blue-translucent);
 }
 
 .settingsText {
   font-weight: 700;
   font-size: 15px;
   line-height: 1.49;
-  color: #323f47;
+  color: var(--dark-blue);
 }
 
 .logoutText {
   font-weight: 700;
   font-size: 15px;
   line-height: 1.49;
-  color: rgba(50, 63, 71, 0.4);
+  color: var(--dark-blue-translucent);
 }
