change hover on add water btn
Co-Authored-By: Volodymyr BERESNIEV <105537147+bvv023@users.noreply.github.com>
Co-Authored-By: ArturVayutskiy <150190335+ArturVayutskiy@users.noreply.github.com>
Co-Authored-By: Oleksandr Humeniuk <149683417+Tokyo772@users.noreply.github.com>

--- a/src/components/AddWaterBtn/AddWaterBtn.module.css
+++ b/src/components/AddWaterBtn/AddWaterBtn.module.css
@@ -15,14 +15,17 @@
   width: 16px;
   height: 16px;
   border-radius: 50px;
+
   stroke: var(--white);
-  transition: transform var(--Animation_cubic);
+  transition: transform var(--Animation_cubic),
+    background-color var(--Animation_cubic), stroke var(--Animation_cubic);
 }
 
 .primaryButton:focus .primaryButtonIcon,
 .primaryButton:hover .primaryButtonIcon {
   transform: rotate(180deg);
-  stroke: var(--light-green-hover);
+  background-color: var(--light-green);
+  stroke: var(--dark-blue);
 }
 
 .primaryButtonText {
@@ -34,11 +37,6 @@
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: -0.01em;
-}
-
-.primaryButton:focus .primaryButtonText,
-.primaryButton:hover .primaryButtonText {
-  color: var(--light-green-hover);
 }
 
 .absolute {
@@ -82,12 +80,15 @@
   stroke: var(--dark-blue);
   border-radius: 50%;
   padding: 6px;
-  transition: transform var(--Animation_cubic);
+  transition: transform var(--Animation_cubic),
+    background-color var(--Animation_cubic), stroke var(--Animation_cubic);
 }
 
 .secondaryButton:focus .secondaryButtonIcon,
 .secondaryButton:hover .secondaryButtonIcon {
   transform: rotate(180deg);
+  background-color: var(--dark-blue);
+  stroke: var(--light-gray);
 }
 
 .secondaryButtonText {
