--- a/src/components/AddWaterBtn/AddWaterBtn.module.css
+++ b/src/components/AddWaterBtn/AddWaterBtn.module.css
@@ -21,7 +21,7 @@
     background-color var(--Animation_cubic), stroke var(--Animation_cubic);
 }
 
-.primaryButton:focus .primaryButtonIcon,
+.primaryButton:active .primaryButtonIcon,
 .primaryButton:hover .primaryButtonIcon {
   transform: rotate(180deg);
   background-color: var(--light-green);
@@ -84,7 +84,7 @@
     background-color var(--Animation_cubic), stroke var(--Animation_cubic);
 }
 
-.secondaryButton:focus .secondaryButtonIcon,
+.secondaryButton:active .secondaryButtonIcon,
 .secondaryButton:hover .secondaryButtonIcon {
   transform: rotate(180deg);
   background-color: var(--dark-blue);
