--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -2,6 +2,13 @@
   width: 303px;
   height: 256px;
 }
+
+.customTooltip {
+  background: rgba(255, 255, 255, 0.9);
+  border: 1px solid #9be1a0;
+  padding: 10px;
+  border-radius: 5px;
+}
 @media only screen and (min-width: 768px) {
   .wrapperStatistics {
     width: 607px;
