--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -123,3 +123,43 @@
     padding: 18px;
   }
 }
+
+.googleBtn {
+  margin: 0 auto;
+  max-width: 436px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  cursor: pointer;
+  border: none;
+  border-radius: 30px;
+  background-color: var(--white);
+  color: var(--dark-blue);
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.28;
+  letter-spacing: -0.14px;
+  padding: 16px;
+  transition: box-shadow var(--Animation_cubic);
+}
+
+.googleBtn:hover {
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 768px) {
+  .googleBtn {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.16px;
+    padding: 18px;
+  }
+}
+
+.googleIcon {
+  width: 65px;
+  height: 20px;
+}
