--- a/src/components/DeleteWaterModal/DeleteWaterModal.module.css
+++ b/src/components/DeleteWaterModal/DeleteWaterModal.module.css
@@ -1,59 +1,59 @@
 .delete-water-modal {
-    display: inline-flex;
-    padding: 40px 14px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 28px;
-    border-radius: 15px;
-    background: #FFF;
-    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.10);
+  display: inline-flex;
+  padding: 40px 14px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.1);
 }
 
-.delete-water-modal-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+.deleteWaterModalContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
-.delete-water-modal-btn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 9px;
+.deleteWaterModalBtn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 9px;
 }
 
-.delete-button-modal {
-    display: flex;
-    padding: 14px 129px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 30px;
-    background: var(--Accent, #9BE1A0);
+.deleteButtonModal {
+  display: flex;
+  padding: 14px 129px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 30px;
+  background: var(--Accent, #9be1a0);
 }
 
-.cancel-button-modal {
-    display: flex;
-    width: 304px;
-    padding: 14px 126px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 30px;
-    background: #F0EFF4;
+.cancelButtonModal {
+  display: flex;
+  width: 304px;
+  padding: 14px 126px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 30px;
+  background: #f0eff4;
 }
 
 .modal-cancel {
-    color: rgba(50, 63, 71, 0.30);
-    text-align: center;
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-    letter-spacing: -0.14px;
+  color: rgba(50, 63, 71, 0.3);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: -0.14px;
 }
