--- a/src/components/WaterModal/WaterForm/WaterForm.module.css
+++ b/src/components/WaterModal/WaterForm/WaterForm.module.css
@@ -154,3 +154,28 @@ p {
   line-height: 1.5;
   letter-spacing: -0.01em;
 }
+.errorMessage {
+  color: var(--error);
+  font-family: 'Poppins, sans-serif';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.29;
+  letter-spacing: -0.01em;
+}
+
+.disabledBtn {
+  color: #bcbcbc;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
+  border-radius: 30px;
+  background: #e6e6e6;
+  cursor: not-allowed;
+}
+.disabledBtn:hover {
+  color: #bcbcbc;
+  background-color: #e6e6e6;
+}
