--- a/src/components/DailyInfo/DailyInfo.module.css
+++ b/src/components/DailyInfo/DailyInfo.module.css
@@ -14,12 +14,13 @@
 
 .wrapper {
   height: 209px;
-
+  margin-top: 43px;
   background-color: #f0eff4;
   box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
   .wrapper {
+    margin-top: 49px;
   }
 }
