--- a/src/components/WaterModal/WaterForm/WaterForm.module.css
+++ b/src/components/WaterModal/WaterForm/WaterForm.module.css
@@ -166,7 +166,7 @@ p {
 .disabledBtn {
   color: #bcbcbc;
   text-align: center;
-  font-family: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
