--- a/src/components/UserSettingsForm/UserSettingsForm.module.css
+++ b/src/components/UserSettingsForm/UserSettingsForm.module.css
@@ -412,3 +412,18 @@
     margin-bottom: 0;
   }
 }
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+  min-width: 0;
+}
+
+legend {
+  display: block;
+  margin-bottom: 0;
+  padding: 0;
+  font-weight: normal;
+  color: inherit;
+}
