--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (min-width: 768px) {
