--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,3 +1,12 @@
+.sectionsWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+  height: 100vh;
+}
+
 .notFoundContent {
   animation: fadeIn 0.5s ease;
   text-align: center;
@@ -94,13 +103,21 @@
 }
 
 @media only screen and (min-width: 1440px) {
+  .sectionsWrapper {
+    flex-direction: row;
+    gap: 32px;
+  }
   .notFoundContent {
-    max-width: 672px;
+    width: 50%;
+    width: 672px;
     height: 448.9px;
+    flex-shrink: 0;
   }
   .lottieContainer {
+    width: 50%;
     min-width: 672px;
     min-height: 448px;
+    flex-shrink: 0;
   }
 }
 
